2008-08-29  Raphael Hertzog  <hertzog@debian.org>

	* scripts/Dpkg/Source/Package/V3/quilt.pm: run_quilt() can be run
	when no quilt series file exist yet. In that case we have to
	provide the name of the series file that we want to create (as the
	quilt command might create it). Up to now
	File::Spec->rel2abs(undef) returned the name of the current
	directory and we improperly used that as value of QUILT_SERIES.
	* scripts/Dpkg/Source/Package/V2.pm (do_build): Change permissions
	of the automatically generated patch which is initially created
	0600 with tempfile().

2008-08-26  Guillem Jover  <guillem@debian.org>

	* configure.ac: Bump version to 1.14.22~.

2008-08-26  Guillem Jover  <guillem@debian.org>

	* configure.ac: Release 1.14.21.

2008-08-26  Guillem Jover  <guillem@debian.org>

	* man/dpkg.1: Escape hyphen in apt-get command.

2008-08-17  Guillem Jover  <guillem@debian.org>

	* man/dpkg.1: Change reference to dselect as being the preferred
	fron-end to aptitude. And 'apt-get dselect-upgrade' to be used to
	act on the current package selections. Add references to aptitude
	and apt man pages in 'SEE ALSO'.

2008-08-16  Guillem Jover  <guillem@debian.org>

	* src/main.c (setpipe): Set file descriptors to close on exec.

2008-08-15  Guillem Jover  <guillem@debian.org>

	* scripts/dpkg-buildpackage.pl (usage): Fix description of -si option.
	* man/dpkg-buildpackage.1: Match description of -si option with the
	one from dpkg-genchanges.1.

2008-08-15  Raphael Hertzog  <hertzog@debian.org>

	* Dpkg/Source/Package.pm (new): Call init_options() only if
	initialize() has been called as it's supposed to be called
	only after the object has been upgraded to its target type.
	(init_options): add a comment that explains that this function is
	not called by Dpkg::Source::Package::V1::init_options() and
	render the function more robust.

2008-08-15  Ian Jackson  <ian@davenant.greenend.org.uk>

	* src/packages.c (process_queue): When onerr_abort is bigger than 0